# clipsneko-installer

./: .gitignore  AGENTS.md  Cargo.toml  README.md  build.rs
.github/workflows/: build.yml  release.yml
config/: packages.list
docs/: design.md  dev-plan.md  dev-prog.md
package/: PKGBUILD
po/: clipsneko-installer.pot
po/de/LC_MESSAGES/: clipsneko-installer.po
po/en/LC_MESSAGES/: clipsneko-installer.po
po/ja/LC_MESSAGES/: clipsneko-installer.po
po/ko/LC_MESSAGES/: clipsneko-installer.po
po/ru/LC_MESSAGES/: clipsneko-installer.po
po/zh_CN/LC_MESSAGES/: clipsneko-installer.po
po/zh_TW/LC_MESSAGES/: clipsneko-installer.po
src/: app.rs  i18n.rs  main.rs  state.rs
src/app/: tests.rs
src/installer/: bootloader.rs  chroot.rs  mod.rs  pacstrap.rs  partition.rs  postinstall.rs
src/steps/: confirm.rs  disk.rs  hostname.rs  install.rs  kernel.rs  keyboard.rs  language.rs  mirror.rs  mod.rs  network.rs  nvidia.rs  timezone.rs  user.rs
src/steps/confirm/: tests.rs
src/steps/disk/: tests.rs
src/steps/hostname/: tests.rs
src/steps/kernel/: tests.rs
src/steps/keyboard/: tests.rs
src/steps/language/: tests.rs
src/steps/mirror/: tests.rs
src/steps/network/: tests.rs
src/steps/nvidia/: tests.rs
src/steps/timezone/: tests.rs
src/steps/user/: tests.rs
src/util/: geoip.rs  locale_list.rs  lsblk.rs  mod.rs  password.rs  process.rs  ui.rs
src/util/locale_list/: tests.rs
src/util/lsblk/: tests.rs
src/util/process/: tests.rs
